--- a/index.html
+++ b/index.html
@@ -65,12 +65,11 @@
                     <p class="fs-5 mb-3">
                         Sou Gabriel Lucas, estudante de Análise e Desenvolvimento de Sistemas no IFTM, cursando o 5º período.
                     </p>
-                    <p class="fs-5 mb-3">
-                        Minha experiência na Skala Cosméticos com Excel despertou meu interesse pela área de dados. Possuo conhecimento em Banco de Dados, lógica de programação em C e estou estudando Python.
-                    </p>
+                        <p class="fs-5">
+                            Estou iniciando na área de dados e em busca de uma oportunidade de estágio para aplicar meus conhecimentos, ganhar experiência prática e descobrir em qual especialidade quero me aprofundar.
+                        </p>
                     <p class="fs-5">
-                        Busco me especializar em Engenharia de Dados, Análise de Dados ou Ciência de Dados, sempre focado em soluções inovadoras.
-                    </p>
+Estou iniciando na área de dados e em busca de uma oportunidade de estágio para aplicar meus conhecimentos, ganhar experiência prática e descobrir em qual especialidade quero me aprofundar.                    </p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <img src="img/Gabriel 2.jpg" alt="Gabriel Lucas" class="img-fluid rounded shadow" style="max-width: 280px;">
@@ -86,36 +85,38 @@
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="card h-100 shadow-sm">
-                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Projeto 1">
+                        <img src="img/imersao_alura.png" class="card-img-top" alt="Projeto 1">
                         <div class="card-body">
-                            <h5 class="card-title">title</h5>
-                            <p class="card-text">conted</p>
+                            <h5 class="card-title">Imersão de dados python da Alura</h5>
+                                <p class="card-text">
+                                    Projeto de dashboard interativo com Python, utilizando Pandas, NumPy, Plotly e Streamlit para análise, tratamento, visualização e apresentação de dados.
+                                </p>
                             <div class="d-flex gap-2">
-                                <a href="#" class="btn btn-primary btn-sm">teste</a>
+                                <a href="https://github.com/gabrielucas1/imersao-dados-python-alura" class="btn btn-primary btn-sm">Visualizar</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card h-100 shadow-sm">
-                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Projeto 1">
+                        <img src="img/futsim.png" class="card-img-top" alt="Projeto 1" style="height: 220px; object-fit: cover;">
                         <div class="card-body">
-                            <h5 class="card-title">title</h5>
-                            <p class="card-text">conted</p>
+                            <h5 class="card-title">Futsim</h5>
+                            <p class="card-text">O FutSim é um app Android desenvolvido em Kotlin, utilizando Jetpack Compose para a interface moderna. Permite criar, gerenciar e simular campeonatos de futebol, com persistência local.</p>
                             <div class="d-flex gap-2">
-                                <a href="#" class="btn btn-primary btn-sm">teste</a>
+                                <a href="https://github.com/gabrielucas1/FutSim" class="btn btn-primary btn-sm">Visualizar</a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card h-100 shadow-sm">
-                        <img src="https://via.placeholder.com/350x200" class="card-img-top" alt="Projeto 1">
-                        <div class="card-body">
-                            <h5 class="card-title">title</h5>
-                            <p class="card-text">conted</p>
-                            <div class="d-flex gap-2">
-                                <a href="#" class="btn btn-primary btn-sm">teste</a>
+                        <img src="img/carometro.png" class="card-img-top" alt="Carometro turbinado">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">Carometro turbinado</h5>
+                            <p class="card-text">O Carômetro Turbinado é um projeto de iniciação científica em sua versão 2.0, feito com React, TypeScript e Firebase. O sistema facilita o controle de relatórios de professores para reuniões acadêmicas.</p>
+                            <div class="d-flex gap-2 mt-auto">
+                                <a href="https://github.com/gabrielucas1/Carometro-turbinado" class="btn btn-primary btn-sm">Visualizar</a>
                             </div>
                         </div>
                     </div>
