Adicionando uma foto nova e ajustando o index

--- a/index.html
+++ b/index.html
@@ -50,66 +50,53 @@
                     <a href="#projects" class="btn btn-warning btn-lg px-4">Ver Projetos</a>
                 </div>
                 <div class="col-lg-5 text-center">
-                    <img src="img/Gabriel 2.jpg" alt="Gabriel Lucas" class="img-fluid rounded-circle shadow-lg" style="width: 350px; height: 350px; object-fit: cover;">
+                    <img src="img/face.jpg" alt="Gabriel Lucas" class="img-fluid rounded-circle shadow-lg" style="width: 350px; height: 350px; object-fit: cover;">
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Seção Sobre Mim -->
-    <section id="about" class="py-5 bg-light">
+<section id="about" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center mb-5 fw-bold">Sobre Mim</h2>
             <div class="row align-items-center">
                 <div class="col-lg-8">
                     <p class="fs-5 mb-3">
-                        Sou Gabriel Lucas, estudante de Análise e Desenvolvimento de Sistemas no IFTM, cursando o 5º período.
+                        Sou Gabriel Lucas, estudante de Análise e Desenvolvimento de Sistemas no IFTM, e um explorador na área de Dados.
                     </p>
-                        <p class="fs-5">
-                            Estou iniciando na área de dados e em busca de uma oportunidade de estágio para aplicar meus conhecimentos, ganhar experiência prática e descobrir em qual especialidade quero me aprofundar.
-                        </p>
                     <p class="fs-5">
-Estou iniciando na área de dados e em busca de uma oportunidade de estágio para aplicar meus conhecimentos, ganhar experiência prática e descobrir em qual especialidade quero me aprofundar.                    </p>
+                        Minha jornada acadêmica me deu uma base sólida em lógica e bancos de dados relacionais (SQL), e hoje estou focado em aprofundar minhas habilidades em ferramentas essenciais para ingressar na area de dados, como Excel,Power BI e Python.
+                    </p>
+                    <p class="fs-5">
+                         Com um perfil analítico e curioso, busco uma oportunidade como Assistente de Dados para colaborar na criação de dashboards e relatórios, com o objetivo de transformar dados em insights valiosos para a tomada de decisões estratégicas.                    </p>
                 </div>
                 <div class="col-lg-4 text-center">
-                    <img src="img/Gabriel 2.jpg" alt="Gabriel Lucas" class="img-fluid rounded shadow" style="max-width: 280px;">
+                    <img src="img/face.jpg" alt="Gabriel Lucas" class="img-fluid rounded shadow" style="max-width: 280px;">
                 </div>
             </div>
         </div>
     </section>
-
     <!-- Seção Projetos -->
     <section id="projects" class="py-5">
         <div class="container">
             <h2 class="text-center mb-5 fw-bold">Meus Projetos</h2>
-            <div class="row g-4">
-                <div class="col-md-4">
+            <div class="row g-4 justify-content-center">
+                <div class="col-md-6">
                     <div class="card h-100 shadow-sm">
                         <img src="img/imersao_alura.png" class="card-img-top" alt="Projeto 1">
                         <div class="card-body">
                             <h5 class="card-title">Imersão de dados python da Alura</h5>
-                                <p class="card-text">
-                                    Projeto de dashboard interativo com Python, utilizando Pandas, NumPy, Plotly e Streamlit para análise, tratamento, visualização e apresentação de dados.
-                                </p>
+                            <p class="card-text">
+                                Projeto de dashboard interativo com Python, utilizando Pandas, NumPy, Plotly e Streamlit para análise, tratamento, visualização e apresentação de dados.
+                            </p>
                             <div class="d-flex gap-2">
                                 <a href="https://github.com/gabrielucas1/imersao-dados-python-alura" class="btn btn-primary btn-sm">Visualizar</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card h-100 shadow-sm">
-                        <img src="img/futsim.png" class="card-img-top" alt="Projeto 1" style="height: 220px; object-fit: cover;">
-                        <div class="card-body">
-                            <h5 class="card-title">Futsim</h5>
-                            <p class="card-text">O FutSim é um app Android desenvolvido em Kotlin, utilizando Jetpack Compose para a interface moderna. Permite criar, gerenciar e simular campeonatos de futebol, com persistência local.</p>
-                            <div class="d-flex gap-2">
-                                <a href="https://github.com/gabrielucas1/FutSim" class="btn btn-primary btn-sm">Visualizar</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="card h-100 shadow-sm">
                         <img src="img/carometro.png" class="card-img-top" alt="Carometro turbinado">
                         <div class="card-body d-flex flex-column">
@@ -120,7 +107,6 @@ Estou iniciando na área de dados e em busca de uma oportunidade de estágio par
                             </div>
                         </div>
                     </div>
-                </div>
                 </div>
             </div>
         </div>
@@ -145,7 +131,7 @@ Estou iniciando na área de dados e em busca de uma oportunidade de estágio par
                         <div class="card-body">
                             <i class="fas fa-database fa-3x text-success mb-3"></i>
                             <h5 class="card-title">Banco de Dados</h5>
-                            <p class="card-text">MySQL, PostgreSQL, modelagem</p>
+                            <p class="card-text">MySQL, PostgreSQL e modelagem de dados</p>
                         </div>
                     </div>
                 </div>
@@ -179,9 +165,9 @@ Estou iniciando na área de dados e em busca de uma oportunidade de estágio par
                 <div class="col-md-4">
                     <div class="card h-100 text-center shadow-sm">
                         <div class="card-body">
-                            <i class="fab fa-css3-alt fa-3x text-primary mb-3"></i>
-                            <h5 class="card-title">CSS3</h5>
-                            <p class="card-text">Estilização e design</p>
+                            <i class="fas fa-cogs fa-3x text-primary mb-3"></i>
+                            <h5 class="card-title">Metodologias Ageis</h5>
+                            <p class="card-text">Scrum e kanban</p>
                         </div>
                     </div>
                 </div>
