Revise 'Sobre Mim' section with updated information
Updated personal introduction and skills in the 'Sobre Mim' section.

--- a/index.html
+++ b/index.html
@@ -56,20 +56,20 @@
         </div>
     </section>
 
-    <!-- Seção Sobre Mim -->
 <section id="about" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center mb-5 fw-bold">Sobre Mim</h2>
             <div class="row align-items-center">
                 <div class="col-lg-8">
                     <p class="fs-5 mb-3">
-                        Sou Gabriel Lucas, estudante de Análise e Desenvolvimento de Sistemas no IFTM, e um explorador na área de Dados.
+                        Sou Gabriel Lucas, estudante de Análise e Desenvolvimento de Sistemas no IFTM, atualmente no 5 período.
                     </p>
                     <p class="fs-5">
-                        Minha jornada acadêmica me deu uma base sólida em lógica e bancos de dados relacionais (SQL), e hoje estou focado em aprofundar minhas habilidades em ferramentas essenciais para ingressar na area de dados, como Excel,Power BI e Python.
+                     Busco uma oportunidade para desenvolver minhas habilidades e contribuir para o crescimento da sua empresa. Tenho experiencia com desenvolvimento em react em uma iniciação cientifica, além de projetos academicos em c e java.
                     </p>
                     <p class="fs-5">
-                         Com um perfil analítico e curioso, busco uma oportunidade como Assistente de Dados para colaborar na criação de dashboards e relatórios, com o objetivo de transformar dados em insights valiosos para a tomada de decisões estratégicas.                    </p>
+                    Estudo continuamente novas tecnologias, linguagens e boas práticas de desenvolvimento, buscando aprimorar minhas habilidades.
+                    </p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <img src="img/face.jpg" alt="Gabriel Lucas" class="img-fluid rounded shadow" style="max-width: 280px;">
