Update 'Sobre Mim' section with improved text

--- a/index.html
+++ b/index.html
@@ -57,26 +57,27 @@
     </section>
 
 <section id="about" class="py-5 bg-light">
-        <div class="container">
-            <h2 class="text-center mb-5 fw-bold">Sobre Mim</h2>
-            <div class="row align-items-center">
-                <div class="col-lg-8">
-                    <p class="fs-5 mb-3">
-                        Sou Gabriel Lucas, estudante de Análise e Desenvolvimento de Sistemas no IFTM, atualmente no 5 período.
-                    </p>
-                    <p class="fs-5">
-                     Busco uma oportunidade para desenvolver minhas habilidades e contribuir para o crescimento da sua empresa. Tenho experiencia com desenvolvimento em react em uma iniciação cientifica, além de projetos academicos em c e java.
-                    </p>
-                    <p class="fs-5">
-                    Estudo continuamente novas tecnologias, linguagens e boas práticas de desenvolvimento, buscando aprimorar minhas habilidades.
-                    </p>
-                </div>
-                <div class="col-lg-4 text-center">
-                    <img src="img/face.jpg" alt="Gabriel Lucas" class="img-fluid rounded shadow" style="max-width: 280px;">
-                </div>
-            </div>
-        </div>
-    </section>
+  <div class="container">
+    <h2 class="text-center mb-5 fw-bold">Sobre Mim</h2>
+    <div class="row align-items-center">
+      <div class="col-lg-8">
+        <p class="fs-5 mb-3">
+          Sou Gabriel Lucas, estudante de Análise e Desenvolvimento de Sistemas no IFTM, atualmente no 5º período.
+        </p>
+        <p class="fs-5">
+          Busco uma oportunidade para desenvolver minhas habilidades e contribuir para o crescimento da empresa. Tenho experiência com desenvolvimento em React em uma iniciação científica, além de projetos acadêmicos em C e Java.
+        </p>
+        <p class="fs-5">
+          Estudo continuamente novas tecnologias, linguagens e boas práticas de desenvolvimento, buscando aprimorar minhas habilidades e criar soluções criativas e eficazes.
+        </p>
+      </div>
+      <div class="col-lg-4 text-center">
+        <img src="img/face.jpg" alt="Gabriel Lucas" class="img-fluid rounded shadow" style="max-width: 280px;">
+      </div>
+    </div>
+  </div>
+</section>
+
     <!-- Seção Projetos -->
     <section id="projects" class="py-5">
         <div class="container">
