ajustando o direcionamento do linkedin

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <div class="col-md-4">
                             <div class="d-flex flex-column align-items-center">
                                 <i class="fab fa-linkedin fa-2x text-warning mb-2"></i>
-                                <a href="https://www.linkedin.com/in/gabriel-lucas-961116239/" target="_blank" class="text-white text-decoration-none">
+                                <a href="www.linkedin.com/in/gabriel-seabra-961116239" target="_blank" class="text-white text-decoration-none">
                                     LinkedIn
                                 </a>
                             </div>
