Fix LinkedIn link to include 'https://'

--- a/index.html
+++ b/index.html
@@ -194,9 +194,10 @@
                         <div class="col-md-4">
                             <div class="d-flex flex-column align-items-center">
                                 <i class="fab fa-linkedin fa-2x text-warning mb-2"></i>
-                                <a href="www.linkedin.com/in/gabriel-seabra-961116239" target="_blank" class="text-white text-decoration-none">
+                                <a href="https://www.linkedin.com/in/gabriel-seabra-961116239" target="_blank" class="text-white text-decoration-none">
                                     LinkedIn
                                 </a>
+                                
                             </div>
                         </div>
                         <div class="col-md-4">
